# coding_assessment

./: README.md
pokemon_trainer_hiring_evaluation/: .gitignore  README.md  main.py  pyproject.toml
pokemon_trainer_hiring_evaluation/data/raw/: ds_pokemon_names.csv
pokemon_trainer_hiring_evaluation/notebooks/: data_analysis.ipynb
pokemon_trainer_hiring_evaluation/src/: evaluate.py  process.py  train_model.py  utils.py
pokemon_trainer_hiring_evaluation/tests/: test_utils.py
