[tool.poetry]
name = "pokemon_trainer_hiring_evaluation"
version = "0.1.0"
description = "Evaluation metrics for pokemon trainer hiring practices"
authors = ["Elle Loveseth"]

[tool.poetry.dependencies]
python = "^3.8"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
sklearn = "^0.0"
imblearn = "^0.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
